openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-backend-service
spec:
  selector:
    app: nestjs-backend
  ports:
    - name: http
      port: 80
      targetPort: http
